Initial commit, still under progress

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
         <div class="flex" id="content">
             <div class="cards" id="from_card">
                 <h5>Amount</h5>
-                <div class="flex">
+                <div class="flex space">
                     <span id="from_country">
-                    <img id="from_img" src="" alt="">
-                    <select name="from" id="">
+                    <img id="from_img" src="https://flagsapi.com/US/flat/64.png" alt="">
+                    <select name="" id="from">
                     </select>
                     </span>
-                    <span id="amount"> 
-                    </span>
+                    <input id="amount"> 
+                </input>
                 </div>
             </div>
             <div>
@@ -30,14 +30,14 @@
             </div>
             <div class="cards" id="to_card">
                 <h5>Converted amount</h5>
-                <div class="flex">
+                <div class="flex space">
                     <span id="to_country">
-                    <img  id="to_image" src="" alt="">
-                    <select name="to" id="">
+                    <img  id="to_image" src="https://flagsapi.com/IN/flat/64.png" alt="">
+                    <select name="" id="to">
                     </select>
                     </span>
-                    <span id="converted_amount">
-                    </span>
+                    <input id="converted_amount" readonly>
+                    </input>
                 </div>
             </div>
         </div>
@@ -47,5 +47,6 @@
         </div>
     </div>
     <script src="script.js"></script>
+    <script src="codes.js"></script>
 </body>
 </html>
