Added almost all functionality

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <h5>Converted amount</h5>
                 <div class="flex space">
                     <span id="to_country">
-                    <img  id="to_image" src="https://flagsapi.com/IN/flat/64.png" alt="">
+                    <img  id="to_img" src="https://flagsapi.com/IN/flat/64.png" alt="">
                     <select name="" id="to">
                     </select>
                     </span>
